@@ -3,6 +3,8 @@ CHANGES IN FLTK 1.1.7
 	- Documentation fixes (STR #571, STR #648, STR #692, STR
 	  #730, STR #744, STR #745, STR #931, STR #942, STR #960,
 	  STR #969)
+	- Fixed event_text() field on FL_DND_* event on 
+	  OS X (STR #968)
 	- The fltk-config utility now supports "--cc" and "--cxx"
 	  options to get the C and C++ compilers that were used
 	  to compile FLTK (STR #868)
